# solidengine

./: .gitignore  CMakeLists.txt  README.md  run.bat
src/: game.cpp  game.h  input.cpp  input.h  main.cpp  scene.cpp  scene.h
src/common/: defines.h  logging.cpp  logging.h  tokenizer.cpp  tokenizer.h
src/loaders/: obj.cpp  obj.h
src/renderer/: camera.cpp  camera.h  mesh.cpp  mesh.h  renderer.cpp  renderer.h  shader.cpp  shader.h  texture.cpp  texture.h
